Issue 52684: Update Log4j plugin registration (#1069)